30. Apr 2012 Christoph Thielecke <crissi99@gmx.de>
	- allow user to resize column width of directory tree again

22. Apr 2012 Christoph Thielecke <crissi99@gmx.de>
	- load media info on static mediainfo fixed
	- language loading on os/2 fixed

21. Apr 2012 Christoph Thielecke <crissi99@gmx.de>
	- crash on loading file content fixed
	- crash on insert history action fixed
	- own messagehandler on debug build added
	- os/2 support added

19. Apr 2012 Christoph Thielecke <crissi99@gmx.de>
	- crash at adding new media if dirview is empty fixed

18. Apr 2012 Christoph Thielecke <crissi99@gmx.de>
	- make listview columns resizeable again

13. Apr 2012 Christoph Thielecke <crissi99@gmx.de>
	- sorting on result listview at finddialog added

12. Apr 2012 Christoph Thielecke <crissi99@gmx.de>
	- sorting at treeview and fileview reenabled
	- context menu entries for listview and treeview fixed

11. Apr 2012 Christoph Thielecke <crissi99@gmx.de>
	- lang selector fixed
	- select lang at osx fixed
	- changing language on the fly fixed (win32/osx)
	- switching back to english lang fixed (win32/osx)
	- missing label translation at file view on translation change added

10. Apr 2012 Christoph Thielecke <crissi99@gmx.de>
	- dirview ported to qtreewidget
	- lnode ported to qtreewidgetitem
	- hdirview ported to qtreewidget
	- directory ported to qtreewidgetitem
	- qt3 compat includes removed
	- indicator and indention on results listview removed
	- qt3support members rewritten
	- swapped context menu call fixed
	- allow clear result listview if only status text in it

09. Apr 2012 Christoph Thielecke <crissi99@gmx.de>
	- hqlistview ported to qtreewidget
	- hqlistviewitem ported to qtreewidgetitem
	- q3listview at finddialog replaced by qtreewidget
	- q3listviewitem at finddialog replaced by qtreewidgetitem

08. Apr 2012 Christoph Thielecke <crissi99@gmx.de>
	- crash at search for duplicates fixed
	- find for category at finddialog added
