@@ -1,3 +1,6 @@
+01. May 2012 Christoph Thielecke <crissi99@gmx.de>
+	- displaying type in directory tree fixed
+
 30. Apr 2012 Christoph Thielecke <crissi99@gmx.de>
 	- allow user to resize column width of directory tree again
 
